force-app/main/default/objects/ObjetoPostagemReversa__c/ObjetoPostagemReversa__c.object-meta.xml
<CustomObject>
    <description>Objeto criado para armazenar os objetos de Postagem Reversa criados para os casos de Postagem Reversa</description>
    <label>Objeto Postagem Reversa</label>
    <nameField>
        <displayFormat>OPS-{0000}</displayFormat>
        <label>Nome de Objeto Postagem Reversa</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Objetos Postagem Reversa</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>