force-app/main/default/objects/ObjetoPostagemReversa__c/fields/Caso__c.field-meta.xml
<CustomField>
    <fullName>Caso__c</fullName>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Objetos Postagem Reversa</relationshipLabel>
    <relationshipName>ObjetosPostagemReversa</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>