force-app/main/default/objects/ObjetoPostagemReversa__c/fields/DataUltimaAtualizacao__c.field-meta.xml
<CustomField>
    <fullName>DataUltimaAtualizacao__c</fullName>
    <label>Data da Última Atualização</label>
    <length>50</length>
    <type>Text</type>
</CustomField>