force-app/main/default/objects/ObjetoPostagemReversa__c/fields/EnvioConcluido__c.field-meta.xml
<CustomField>
    <fullName>EnvioConcluido__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Campo para informar se, baseado no status do rastreamento dos Correios, o envio do objeto já foi concluído.</inlineHelpText>
    <label>Envio Concluído?</label>
    <type>Checkbox</type>
</CustomField>