force-app/main/default/objects/ObjetoPostagemReversa__c/fields/Fraud_Product_Reverse__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Product_Reverse__c</fullName>
    <label>Fraude do Produto Reversa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>