force-app/main/default/objects/ObjetoPostagemReversa__c/fields/HoraUltimaAtualizacao__c.field-meta.xml
<CustomField>
    <fullName>HoraUltimaAtualizacao__c</fullName>
    <label>Hora da Última Atualização</label>
    <length>10</length>
    <type>Text</type>
</CustomField>