force-app/main/default/objects/ObjetoPostagemReversa__c/fields/idObjetoColeta__c.field-meta.xml
<CustomField>
    <fullName>idObjetoColeta__c</fullName>
    <label>idObjetoColeta__c</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>