force-app/main/default/objects/ObjetoPostagemReversa__c/fields/NumeroEtiqueta__c.field-meta.xml
<CustomField>
    <fullName>NumeroEtiqueta__c</fullName>
    <label>Número de Rastreamento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>