force-app/main/default/objects/ObjetoPostagemReversa__c/fields/Ord_Product_Reverse__c.field-meta.xml
<CustomField>
    <fullName>Ord_Product_Reverse__c</fullName>
    <label>Pedido do Produto da Reversa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>