force-app/main/default/objects/ObjetoPostagemReversa__c/fields/OrderItem__c.field-meta.xml
<CustomField>
    <fullName>OrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto do pedido</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Objetos Postagem Reversa</relationshipLabel>
    <relationshipName>Objetos_Postagem_Reversa</relationshipName>
    <type>Lookup</type>
</CustomField>