force-app/main/default/objects/ObjetoPostagemReversa__c/fields/Product_Comments_Reverse__c.field-meta.xml
<CustomField>
    <fullName>Product_Comments_Reverse__c</fullName>
    <label>Comentário do Produto Reversa</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>