force-app/main/default/objects/ObjetoPostagemReversa__c/fields/Product_Name_Reverse__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Reverse__c</fullName>
    <label>Nome do Produto Reversa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>