force-app/main/default/objects/ObjetoPostagemReversa__c/fields/Product_Order_Id_Reverse__c.field-meta.xml
<CustomField>
    <fullName>Product_Order_Id_Reverse__c</fullName>
    <label>Id do Pedido Produto Reversa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>