force-app/main/default/objects/ObjetoPostagemReversa__c/fields/Product_Protocol_Reverse__c.field-meta.xml
<CustomField>
    <fullName>Product_Protocol_Reverse__c</fullName>
    <label>Protocolo Produto Reversa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>