force-app/main/default/objects/ObjetoPostagemReversa__c/fields/Product_Reason_Action_Reverse__c.field-meta.xml
<CustomField>
    <fullName>Product_Reason_Action_Reverse__c</fullName>
    <label>Ação do Produto do Motivo Reversa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>