force-app/main/default/objects/ObjetoPostagemReversa__c/fields/Product_Reason_Description_Reverse__c.field-meta.xml
<CustomField>
    <fullName>Product_Reason_Description_Reverse__c</fullName>
    <label>Descrição do Produto do Motivo Reversa</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>