force-app/main/default/objects/ObjetoPostagemReversa__c/fields/Product_Reverse_Action__c.field-meta.xml
<CustomField>
    <fullName>Product_Reverse_Action__c</fullName>
    <label>Ação do Produto Reversa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>