force-app/main/default/objects/ObjetoPostagemReversa__c/fields/Product_Selling_Price_Reverse__c.field-meta.xml
<CustomField>
    <fullName>Product_Selling_Price_Reverse__c</fullName>
    <label>Preço de Venda Produto Reversa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>