force-app/main/default/objects/ObjetoPostagemReversa__c/fields/Product_SKU_Reverse__c.field-meta.xml
<CustomField>
    <fullName>Product_SKU_Reverse__c</fullName>
    <label>SKU Produto Reversa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>