force-app/main/default/objects/ObjetoPostagemReversa__c/fields/Qty_Product_Reverse__c.field-meta.xml
<CustomField>
    <fullName>Qty_Product_Reverse__c</fullName>
    <label>Quantidade do Produto da Reversa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>