force-app/main/default/objects/ObjetoPostagemReversa__c/fields/Received_Qty_Product_Reverse__c.field-meta.xml
<CustomField>
    <fullName>Received_Qty_Product_Reverse__c</fullName>
    <label>Quantidade Recebida Produto Reversa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>