force-app/main/default/objects/ObjetoPostagemReversa__c/fields/Refund_Product_Requests_Reverse__c.field-meta.xml
<CustomField>
    <fullName>Refund_Product_Requests_Reverse__c</fullName>
    <label>Solicitação de Reembolso Produto Reversa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>