force-app/main/default/objects/ObjetoPostagemReversa__c/fields/Requested_Qty_Produtct_Reverse__c.field-meta.xml
<CustomField>
    <fullName>Requested_Qty_Produtct_Reverse__c</fullName>
    <label>Quantidade Solicitada do Produto Reversa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>