force-app/main/default/objects/ObjetoPostagemReversa__c/fields/UltimoStatusRastreamento__c.field-meta.xml
<CustomField>
    <fullName>UltimoStatusRastreamento__c</fullName>
    <label>Último Status de Rastreamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>