force-app/main/default/objects/ObjetoPostagemReversa__c/recordTypes/Postagem_Reversa.recordType-meta.xml
<RecordType>
    <fullName>Postagem_Reversa</fullName>
    <active>true</active>
    <label>Postagem Reversa</label>
</RecordType>