force-app/main/default/objects/ObjetoPostagemReversa__c/recordTypes/Troque_Facil.recordType-meta.xml
<RecordType>
    <fullName>Troque_Facil</fullName>
    <active>true</active>
    <label>Troque Fácil</label>
</RecordType>